apps/mdp-website/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mdp-website
spec:
  selector:
    app: mdp-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
