apps/mdp-website/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdp-website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mdp.global
      secretName: mdp-website-tls
  rules:
    - host: mdp.global
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mdp-website
                port:
                  number: 80
